<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Raj Kukadia</string>
    <string name="quit_label">Quit</string>
    <string name="generate_error_label">Generate Error</string>
    <string name="game_enter_label">TicTacToe</string>
    <string name="about_mainactivity_label">About</string>
    <string name="about_mainactivity_text">
            Raj Kukadia \n
        kukadia.r@husky.neu.edu \n
        1st year M.S \n
           Telecommunication Systems Management \n

    </string>
    <string name="about_mainactivity_text_dharak">
            Dharak Savalia \n
        savalia.d@husky.neu.edu \n
        1st year M.S \n
           Telecommunication Systems Management \n

    </string>
    <string name="IMEI_label">IMEI</string>
    <string name="ok_label">OK</string>
    <string name="titlebar_label">Raj Kukadia</string>


    <!-- Game-->
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="dict_label">Dictionary</string>
    <string name="scroggle_label">Scroggle</string>
    <string name="scroggle_done_label">Done !</string>
    <string name="scroggle_pause_label">Pause</string>
    <string name="resume_label">Resume</string>
    <string name="mute_label">Sound</string>
    <string name="how_to_play_label">How to play</string>

    <string name="scroggle_ack_label">Things that I did not create from the scratch:\n\n
    \n  > Game UI code and logic behind the level-list that I did not know before this was taken from the
        Hello Android Text and the code from the Ultimate Tic Tac Toe game. \n\n
        > I did not create the code for managing Handlers, reference: http://androidtrainningcenter.blogspot.com/2013/12/handler-vs-timer-fixed-period-execution.html \n\n
        > Text animation reference, http://stackoverflow.com/questions/34089093/how-to-add-animation-to-a-text-view-in-android \n\n
        > Resizing .png images to hdpi, xxhdpi, xhdpi, ldpi, xxxhdpi, mdpi : https://www.img-bak.in/DQOzACpDQmzxV3IcE3QHQoXoInGgRyZU/
    </string>


    <string name="first_instruction_scroggle">

        The task is to make 9 different words..\n\n

        Choose any one letter from the 9 boards..\n\n
    </string>


    <string name="second_instruction_scroggle">
          Great !\n\n
         Minimum length of a word should be 3 letters..\n\n
         Now choose more two letters to form a word..\n\n
         You can\'t choose from the pink tiles..they are freezed ! \n\n
         Choose letters that are connected diagonally, vertically or horizontally only ! \n\n

    </string>
    <string name="third_instruction_scroggle">

        Press this button to confirm your word..\n\n

    </string>
    <string name="fourth_instruction_scroggle">

         Good ! \n\n

         Other tiles are unlocked for you ! \n\n

         Go ahead and make one more word and you are good to play the game ! \n\n

    </string>
    <string name="fifth_instruction_scroggle">

         Excellent ! \n\n

         You get this now ! \n\n
    </string>


    <string name="search_label">Search</string>
    <string name="save_label">Save</string>
    <string name="return_label">Main Menu</string>
    <string name="clear_label">Clear</string>
    <string name="ack_label">Acknowledgement</string>
    <string name="ack_info_label">Info</string>
    <string name="design_label">Design</string>
    <string name="design_help_content">
1. Coding architecture from http://bit.ly/2oVMv8L\n2. Special thanks to Professor Stephen Intille for design suggestion\n3. https://bulkresizephotos.com/\n4. Icons and Images:https://thenounproject.com/term
</string>
    <string name="coding_label">Coding</string>
    <string name="coding_help_content_ping">
1. CircleImageView:http://bit.ly/2ptjx0f\n2. Slidenerd:http://bit.ly/2qex2Pn\n3. http://bit.ly/2oEVsUT\n4. Intro slider:http://bit.ly/2oPIgbe\n5. Preferece screen:http://bit.ly/1NobuZI
</string>
    <string name="third_party_library">Third party libraries</string>
    <string name="coding_third_party_library">
CircleImageView : http://bit.ly/2oPZbKK
</string>
    <string name="communication_label">Communication</string>

    <string name="about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.
</string>
    <string name="about_text_scroggle">\
        This is a word game. You have to make as many words as you can.\n
        There are two phases in this game.\n
        Using for this game for the first time ? Touch "How to play"



</string>
    <string name="ack_content_label">
        <title>ACKNOWLEDGEMENT \n</title>
    </string>
    <string name="references">\n\nReferences </string>
    <string name="ack_details_label_one">
    I have mapped every character to 5 bits. Hence compressing from 16 bits Unicode to 5 bits. \n\n
    Used the same binary values for comparing while the look up is in process.
       I have put four 3 letter words in a single Long, three 4 letter words in a Long, two 5 letter words in a Long, two 6 letter words in a Long.
       \n\nI have put each word from 7 to 25 letters length in a single Long. \n\nFor the words greater than 25 letters, I have used loaded them in string
       format itself since there are only 23 such words in the dictionary.
      \n\nFinally, I have loaded all these encoded files in seperate HashMaps.
        \n\nI have loaded the dictionary in the Main Activity itself so that the app runs smoother from there on.


</string>

    <string name="ack_details_label_two">

    <p>

    Code for TicTacToe: Hello, Android text by Ed Burnette \n \n
    Code for requesting run time permission: https://developer.android.com/training/permissions/requesting.html \n \n
    App icon: Google Images \n \n
    Sound: http://www.tannerhelland.com/music-directory/ \n\n
    Special thanks to my friend Dharak Savalia who helped me coming with a better idea for loading the dictionary efficiently.
</p>


</string>

<string name="ack_details_label_two_ping">

    <p>

    Code for TicTacToe: Hello, Android text by Ed Burnette \n \n
    Code for requesting run time permission: https://developer.android.com/training/permissions/requesting.html \n \n
    App icon: Google Images \n \n
    Sound: http://www.tannerhelland.com/music-directory/ \n\n
    Special thanks to my friend Dharak Savalia who helped me coming with a better idea for loading the dictionary efficiently.
</p>


</string>



    <string name="quickstart_message">The Log Token button logs the Registration token to the log. The Send Notification Button sends the notification to the client device.</string>
    <string name="send_notification">Send Notification</string>
    <string name="log_token">Log Token</string>


    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">FCM Demo</string>
    <string name="go_to_realtime_database_demo">Realtime Database Demo</string>

    <string name="username">User Name</string>
    <string name="score">Score</string>

    <string name="add5">Add 5</string>
    <string name="web_client_id">139899715041-g3dfdk58afhjvsioqs27v04cjneu6jq8.apps.googleusercontent.com</string>


    <string name="logout_label">Logout</string>
    <string name="score_board_label">Score Board</string>
    <string name="myfriends_label">My friends</string>
    <string name="start_multiplayer_label">Start Mutiplayer Game</string>
    <string name="signingoogle_label">Sign in with Google</string>
    <string name="two_player_game_label">Two Player Game</string>

    <string name="default_web_id">139899715041-g3dfdk58afhjvsioqs27v04cjneu6jq8.apps.googleusercontent.com</string>
    <string name="reply_label">Reply label</string>
    <string name="scroggle_ack_multiplayer_label"> \n\n Firebase demo code helped in understanding the working of
        firebase server and how to create a firebase database. \n Google sign in: https://developers.google.com/identity/sign-in/android/sign-in
    \n </string>

    <!-- ...................................PING ................................................................-->

    <string name="ping_label">Ping</string>
    <string name="jump_in_label">Jump In</string>
    <string name="enter_number_label">Enter your phone number </string>
    <string-array name="activity_array">

        <item>running</item>
        <item>walking</item>
        <item>bathing</item>
        <item>cooking</item>
        <item>dancing</item>
        <item>biking</item>
        <item>sitting</item>
        <item>badminton</item>
        <item>soccer</item>
        <item>guitar</item>
        <item>baseball</item>
        <item>gymming</item>
        <item>bowling</item>
        <!--   <item>football</item>-->
        <item>skipping</item>
        <item>treadmill</item>
        <item>volleyball</item>
        <item>music</item>
        <item>brushing</item>
        <item>boating</item>
        <item>bus</item>
        <item>cleaning</item>
        <item>cricket</item>
        <item>dusting</item>
        <!--   <item>football</item>-->
        <item>fishing</item>
        <item>jumpingjacks</item>
        <item>pingpong</item>
        <item>sailing</item>
        <item>shopping</item>
        <item>skiing</item>
        <item>swimming</item>
        <item>tea</item>
        <item>vaccum</item>
        <!--   <item>football</item>-->
        <item>yoga</item>





    </string-array>


    <string name="doubletap">Always double tap to confirm</string>

    <string name="title_activity_ping_home_screen">PingHomeScreenActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>




    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Stay updated</string>
    <string name="slide_1_desc">The easiest way to know what friends and family are upto!</string>

    <string name="slide_2_title">Share updates</string>
    <string name="slide_2_desc">Share your status for your friends and family!</string>

    <string name="slide_3_title">Speak</string>
    <string name="slide_3_desc">It is that easy! Speak the name of your friend whom you want to ping</string>

    <string name="slide_4_title">Double tap</string>
    <string name="slide_4_desc">If not by voice, you can ping by double taps</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>



