<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="@dimen/menu_button_margin"
    android:background="@color/Linen"
    android:scrollIndicators="right"
    android:scrollbars="vertical"
    tools:context=".AcknowledgementAssignment3">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ack_content_label"
        android:textSize="32sp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/ack_details_label_one"
        >

    </TextView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/references"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"

        android:text="@string/ack_details_label_two"
        >

    </TextView>


</LinearLayout>
