<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/menu_button_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/startmultiplayer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/menu_button_margin"
                android:padding="@dimen/menu_button_padding"
                android:layout_gravity="center"
                android:text="@string/start_multiplayer_label"
                android:background="@drawable/button_style"
                 />

            <Button
                android:id="@+id/score_board_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/menu_button_margin"
                android:padding="@dimen/menu_button_padding"
                android:text="@string/score_board_label"
                android:background="@drawable/button_style"

                />

            <Button
                android:id="@+id/myfriends_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/menu_button_margin"
                android:padding="@dimen/menu_button_padding"
                android:text="@string/myfriends_label"
                android:background="@drawable/button_style"
                />

            <Button
                android:id="@+id/ack_button_multiplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/menu_button_margin"
                android:padding="@dimen/menu_button_padding"
                android:text="@string/ack_label"
                android:background="@drawable/button_style"
                />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/menu_button_margin"
                android:padding="@dimen/menu_button_padding"
                android:text="@string/logout_label"
                android:background="@drawable/button_style"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>
